codex-tests/snapshots/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__renamed_thread_footer_title.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Puffin to do anything                                                     "
"                                                                                "
"  gpt-5.2 high · Roadmap cleanup                                                "
